对WWW初版的复原

--- a/D20230717/a.html
+++ b/D20230717/a.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LabelA</title>
 </head>
 <body>
-    <p id=""></p>
+    <a href="web.html" target="_blank">html basic</a>
+    <!-- target上述属性为跳转到新页面 -->
+    <a href="index.html">index</a>
 </body>
 </html>
