--- a/D20230717/index.html
+++ b/D20230717/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>html</h1>
+    <br> <br /> 
+    <!-- br换行，后面的<br />可以省略 -->
+    <hr>
+<!-- hr为分割线，默认为占满左右 -->
 </body>
 </html>
