css使用和实例

--- a/D20230717/resume.html
+++ b/D20230717/resume.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>奖励</title>
+    <title>简历</title>
 </head>
 <body>
-    <table border="1">
-        <tr>
+    <table border="1" width="60%">
+        <tr >
             <td rowspan="7"><img src="" alt="picture"><br><h4 align="center">myself</h4><p align="center">a</p></td>
             <td colspan="5" ><h3>个人简历</h3><h4>求职意向：职业电商</h4></td>
         </tr>
