--- a/D20230718/resume2.html
+++ b/D20230718/resume2.html
@@ -141,20 +141,20 @@
                         CSS</div>
                 </div>
                 <div class="right">
-                    <input id="ck1" type="checkbox" checked />
-                    <label for="ck1"></label>
+                    <input id="css_ck1" type="checkbox" checked />
+                    <label for="css_ck1"></label>
 
-                    <input id="ck2" type="checkbox" checked />
-                    <label for="ck2"></label>
+                    <input id="css_ck2" type="checkbox" checked />
+                    <label for="css_ck2"></label>
 
-                    <input id="ck3" type="checkbox" checked />
-                    <label for="ck3"></label>
+                    <input id="css_ck3" type="checkbox" checked />
+                    <label for="css_ck3"></label>
                     
-                    <input id="ck4" type="checkbox" />
-                    <label for="ck4"></label>
+                    <input id="css_ck4" type="checkbox" />
+                    <label for="css_ck4"></label>
 
-                    <input id="ck5" type="checkbox" />
-                    <label for="ck5"></label>
+                    <input id="css_ck5" type="checkbox" />
+                    <label for="css_ck5"></label>
 
                 </div>
             </div>
