--- a/D20230718/resume2.html
+++ b/D20230718/resume2.html
@@ -10,77 +10,77 @@
 <div class="container">
     <div class="header">
         <div class="full-name">
-            <span class="first-name">First</span>
-            <span class="last-name">last</span>
+            <span class="first-name">姓</span>
+            <span class="last-name">名</span>
         </div>
         <div class="contact-info">
-            <span class="email">Email: </span>
+            <span class="email">邮箱: </span>
             <span class="email-val">first.last@example.com</span>
             <span class="separator"></span>
-            <span class="phone">Phone: </span>
+            <span class="phone">电话: </span>
             <span class="phone-val">18888888888</span>
         </div>
 
         <div class="about">
-            <span class="position">Front-End Developer </span>
+            <span class="position">意向职位 </span>
             <span class="desc">
-                I am a front-end developer with more than 3 years of experience writing html, css, and js. I'm
+                自我介绍：I am a front-end developer with more than 3 years of experience writing html, css, and js. I'm
                 motivated, result-focused and seeking a successful team-oriented company with opportunity to grow.
             </span>
         </div>
     </div>
     <div class="details">
         <div class="section">
-            <div class="section__title">Experience</div>
+            <div class="section__title">经历</div>
             <div class="section__list">
                 <div class="section__list-item">
                     <div class="left">
-                        <div class="name">KlowdBox</div>
-                        <div class="addr">San Fr, CA</div>
-                        <div class="duration">Jan 2011 - Feb 2015</div>
+                        <div class="name">公司A</div>
+                        <div class="addr">地址A</div>
+                        <div class="duration"> 2011.05.01 -  2015.07.21</div>
                     </div>
                     <div class="right">
-                        <div class="name">Fr developer</div>
-                        <div class="desc">did This and that</div>
+                        <div class="name">职位</div>
+                        <div class="desc">工作中的职务以及做了什么</div>
                     </div>
                 </div>
                 <div class="section__list-item">
                     <div class="left">
-                        <div class="name">Akount</div>
-                        <div class="addr">San Monica, CA</div>
-                        <div class="duration">Jan 2011 - Feb 2015</div>
+                        <div class="name">公司B</div>
+                        <div class="addr">地址B</div>
+                        <div class="duration">2011.05.01 -  2015.07.21</div>
                     </div>
                     <div class="right">
-                        <div class="name">Fr developer</div>
-                        <div class="desc">did This and that</div>
+                        <div class="name">职位</div>
+                        <div class="desc">工作中的职务以及做了什么</div>
                     </div>
                 </div>
 
             </div>
         </div>
         <div class="section">
-            <div class="section__title">Education</div>
+            <div class="section__title">教育背景</div>
             <div class="section__list">
                 <div class="section__list-item">
                     <div class="left">
-                        <div class="name">Sample Institute of technology</div>
-                        <div class="addr">San Fr, CA</div>
-                        <div class="duration">Jan 2011 - Feb 2015</div>
+                        <div class="name">学校A</div>
+                        <div class="addr">地址A</div>
+                        <div class="duration">2011.05.01 -  2015.07.21</div>
                     </div>
                     <div class="right">
-                        <div class="name">Fr developer</div>
-                        <div class="desc">did This and that</div>
+                        <div class="name">教育阶段（如大学等）</div>
+                        <div class="desc">在校经历</div>
                     </div>
                 </div>
                 <div class="section__list-item">
                     <div class="left">
-                        <div class="name">Akount</div>
-                        <div class="addr">San Monica, CA</div>
-                        <div class="duration">Jan 2011 - Feb 2015</div>
+                        <div class="name">学校B</div>
+                        <div class="addr">地址B</div>
+                        <div class="duration">2011.05.01 -  2015.07.21</div>
                     </div>
                     <div class="right">
-                        <div class="name">Fr developer</div>
-                        <div class="desc">did This and that</div>
+                        <div class="name">教育阶段（如大学等）</div>
+                        <div class="desc">在校经历</div>
                     </div>
                 </div>
 
@@ -88,18 +88,18 @@
 
         </div>
         <div class="section">
-            <div class="section__title">Projects</div>
+            <div class="section__title">项目开发</div>
             <div class="section__list">
                 <div class="section__list-item">
-                    <div class="name">DSP</div>
-                    <div class="text">I am a front-end developer with more than 3 years of experience writing html, css,
+                    <div class="name">第一个项目</div>
+                    <div class="text">项目简介：I am a front-end developer with more than 3 years of experience writing html, css,
                         and js. I'm motivated, result-focused and seeking a successful team-oriented company with
                         opportunity to grow.</div>
                 </div>
 
                 <div class="section__list-item">
-                    <div class="name">DSP</div>
-                    <div class="text">I am a front-end developer with more than 3 years of experience writing html, css,
+                    <div class="name">第二个项目</div>
+                    <div class="text">项目简介：I am a front-end developer with more than 3 years of experience writing html, css,
                         and js. I'm motivated, result-focused and seeking a successful team-oriented company with
                         opportunity to grow.
                     </div>
@@ -107,7 +107,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="section__title">Skills</div>
+            <div class="section__title">技巧评分</div>
             <div class="skills">
                 <div class="skills__item">
                     <div class="left">
@@ -162,11 +162,13 @@
         </div>
         <div class="section">
             <div class="section__title">
-                Interests
+                兴趣爱好
             </div>
             <div class="section__list">
                 <div class="section__list-item">
-                    Football, programming.
+                    如1.足球：xxxxx <br>
+                    2.xxxxxxx  <br>
+                    3.xxxxxxxx
                 </div>
             </div>
         </div>
