--- a/D20230721/Medium md.html
+++ b/D20230721/Medium md.html
@@ -19,18 +19,18 @@
 </head>
 <body>
 <div class="container text-center">
-    <div class="row ">
-        <div class="col-md col-sm-6">
-            1
+    <div class="row">
+        <div class="col-md col-sm-6 col-3">
+            <div class="box">1</div>
         </div>
-        <div class="col-md col-sm-6">
-            2
+        <div class="col-md col-sm-6 col-3">
+            <div class="box">2</div>
         </div>
-        <div class="col-md col-sm-6">
-            3
+        <div class="col-md col-sm-6 col-6">
+            <div class="box">3</div>
         </div>
-        <div class="col-md col-sm-6">
-            4
+        <div class="col-md col-sm-6 col-12">
+            <div class="box">4</div>
         </div>
     </div>
 </div>
