将icons运用到构建中（将icons中的图标代替√）

--- a/D20230724/MyPictureUseIntroduction.html
+++ b/D20230724/MyPictureUseIntroduction.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
 </head>
 <body>
-<header class="bg-info">
+<header class="bg-info mb-4">
     <div class="align-items-center d-flex flex-column flex-md-row flex-wrap border-bottom">
         <div class="d-flex align-items-center ">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -27,6 +27,12 @@
         </div>
     </div>
 </header>
+    <div class="container text-center">
+        <a href="#">web</a>
+        <div class="flex-column"> <h1 class="f0">Bootstrap Icons</h1></div>
+        <p></p>
+
+    </div>
 <main>
     <div class="d-flex mb-4">
         <ul class="row row-cols-3 row-cols-sm-4 row-cols-lg-6 row-cols-xl-8 list-unstyled list">
