--- a/D20230724/Pricing-example.html
+++ b/D20230724/Pricing-example.html
@@ -7,12 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pricing example</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
-    <style>
-        .bi {
-            vertical-align: -.125em;
-            fill: currentColor;
-        }
-    </style>
+    <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css">
 </head>
 <body>
 <div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle">
@@ -159,41 +154,41 @@
         <tbody>
         <tr>
             <th style="width: 34%;">Public</th>
-            <td style="width: 22%;"><span class="h2">√</span></td>
-            <td style="width: 22%;"><span class="h2">√</span></td>
-            <td style="width: 22%;"><span class="h2">√</span></td>
+            <td style="width: 22%;"><i class="bi bi-check fs-1"></i></td>
+            <td style="width: 22%;"><i class="bi bi-check fs-1"></i></td>
+            <td style="width: 22%;"><i class="bi bi-check fs-1"></i></td>
         </tr>
         <tr>
             <th style="width: 34%;">Private</th>
             <td style="width: 22%;"></td>
-            <td style="width: 22%;"><span class="h2">√</span></td>
-            <td style="width: 22%;"><span class="h2">√</span></td>
+            <td style="width: 22%;"><i class="bi bi-check fs-1"></i></td>
+            <td style="width: 22%;"><i class="bi bi-check fs-1"></i></td>
         </tr>
         </tbody>
         <tbody>
         <tr>
             <th style="width: 34%;">Permissions</th>
-            <td style="width: 22%;"><span class="h2">√</span></td>
-            <td style="width: 22%;"><span class="h2">√</span></td>
-            <td style="width: 22%;"><span class="h2">√</span></td>
+            <td style="width: 22%;"><i class="bi bi-check fs-1"></i></td>
+            <td style="width: 22%;"><i class="bi bi-check fs-1"></i></td>
+            <td style="width: 22%;"><i class="bi bi-check fs-1"></i></td>
         </tr>
         <tr>
             <th style="width: 34%;">Sharing</th>
             <td style="width: 22%;"></td>
-            <td style="width: 22%;"><span class="h2">√</span></td>
-            <td style="width: 22%;"><span class="h2">√</span></td>
+            <td style="width: 22%;"><i class="bi bi-check fs-1"></i></td>
+            <td style="width: 22%;"><i class="bi bi-check fs-1"></i></td>
         </tr>
         <tr>
             <th style="width: 34%;">Unlimited members</th>
             <td style="width: 22%;"></td>
-            <td style="width: 22%;"><span class="h2">√</span></td>
-            <td style="width: 22%;"><span class="h2">√</span></td>
+            <td style="width: 22%;"><i class="bi bi-check fs-1"></i></td>
+            <td style="width: 22%;"><i class="bi bi-check fs-1"></i></td>
         </tr>
         <tr>
             <th style="width: 34%;">Extra security</th>
             <td style="width: 22%;"></td>
             <td style="width: 22%;"></td>
-            <td style="width: 22%;"><span class="h2">√</span></td>
+            <td style="width: 22%;"><i class="bi bi-check fs-1"></i></td>
         </tr>
         </tbody>
     </table>
