--- a/D20230725/MyWebsite.html
+++ b/D20230725/MyWebsite.html
@@ -73,7 +73,7 @@
 <footer>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-md justify-content-center justify-content-md-start">
-            <small class="d-block mb-3 text-body-secondary">Desingned by <a href="#" class="link-body-emphasis text-decoration-none">@you</a>-From X to Z</small>
+            <small class="d-block mb-3 text-body-secondary">Desingned by <a href="#" class="link-body-emphasis text-decoration-none">@sEGuoer</a>-From 2023 to 2033</small>
         </div>
     </nav>
 </footer>
