--- a/D20230725/MyWebsite.html
+++ b/D20230725/MyWebsite.html
@@ -6,7 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../node_modules/animate.css/animate.min.css">
 </head>
 <body>
 <div class="container"></div>
@@ -36,9 +37,9 @@
     <div class="container mt-5">
         <div class="text-center mb-5">
             <div class="flex-column">
-                <h2 class="h1">欢迎来到我的主页</h2>
-                <p class="text-primary">个人简介</p>
-                <p class="text-info m-auto p-5">个人简介</p>
+                <h2 class="h1 animate__animated animate__fadeInDown">欢迎来到我的主页</h2>
+                <p class="text-primary animate__animated animate__backInLeft">个人简介</p>
+                <p class="text-info m-auto  animate__animated animate__zoomInUp animate__delay-2s">个人简介</p>
             </div>
             <div class="row  m-4 p-4 mb-5 align-items-center" id="abc">
                 <div class="left col-12 col-md-6 text-center text-md-start">
