将动画效果运用到主页中2

--- a/D20230725/MyWebsite.html
+++ b/D20230725/MyWebsite.html
@@ -35,10 +35,10 @@
 </header>
 <main>
     <div class="container mt-5">
-        <div class="text-center mb-5">
-            <div class="flex-column">
+        <div class="d-flex flex-column mb-5">
+            <div class="text-center">
                 <h2 class="h1 animate__animated animate__fadeInDown">欢迎来到我的主页</h2>
-                <p class="text-primary animate__animated animate__backInLeft">个人简介</p>
+                <p class="text-primary animate__animated animate__delay-3s animate__lightSpeedOutRight">个人简介</p>
                 <p class="text-info m-auto  animate__animated animate__zoomInUp animate__delay-2s">个人简介</p>
             </div>
             <div class="row  m-4 p-4 mb-5 align-items-center" id="abc">
@@ -46,8 +46,8 @@
                     <h3 class="fs-3" id="resume">简历</h3>
                     <h4 class="fs-6 fw-light">一句话介绍</h4>
                 </div>
-                <div class="right col-12 col-md-6  text-center text-md-end "><img src="../QQ截图20230725113119.png"
-                                                        alt=""  class="border rounded-4"></div>
+                <img src="../A%251%60%60I%5D)S10XAIC%6086BS(32.png"
+                     alt="" class="right col-12 col-md-6 text-center text-md-start border rounded-4 shadow">
             </div>
             <div class="row  m-4 p-4 mb-5 align-items-center" id="ab">
                 <div class="d-flex flex-md-row-reverse flex-column align-items-center">
@@ -55,18 +55,17 @@
                         <h3 class="fs-3" id="boke">博客</h3>
                         <h4 class="fs-6 fw-light">一句话介绍</h4>
                     </div>
-                    <div class="right col-12 col-md-6 text-center text-md-start">
-                        <img src="../QQ截图20230725113119.png" alt="" class="border rounded-4">
-                    </div>
+                    <img src="../A%251%60%60I%5D)S10XAIC%6086BS(32.png" alt=""
+                         class="right col-12 col-md-6 text-center text-md-start border rounded-4 shadow">
                 </div>
             </div>
-            <div class="row m-4 p-4 mb-5 align-items-center" >
+            <div class="row m-4 p-4 mb-5 align-items-center">
                 <div class="left col-12 col-md-6 text-center text-md-start">
                     <h3 class="fs-3" id="zuopin">作品</h3>
                     <h4 class="fs-6 fw-light">一句话介绍</h4>
                 </div>
-                <div class="right col-12 col-md-6  text-center text-md-end "><img src="../QQ截图20230725113119.png"
-                                                        alt="" class="border rounded-4"></div>
+                <img src="../A%251%60%60I%5D)S10XAIC%6086BS(32.png"
+                     alt="" class="right col-12 col-md-6 text-center text-md-start border rounded-4 shadow">
             </div>
         </div>
     </div>
@@ -74,7 +73,9 @@
 <footer>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-md justify-content-center justify-content-md-start">
-            <small class="d-block mb-3 text-body-secondary">Desingned by <a href="#" class="link-body-emphasis text-decoration-none">@sEGuoer</a>-From 2023 to 2033</small>
+            <small class="d-block mb-3 text-body-secondary">Desingned by <a href="#"
+                                                                            class="link-body-emphasis text-decoration-none">@sEGuoer</a>-From
+                2023 to 2033</small>
         </div>
     </nav>
 </footer>
