--- a/D20230725/MyWebsite.html
+++ b/D20230725/MyWebsite.html
@@ -8,6 +8,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../node_modules/animate.css/animate.min.css">
+    <style>
+        body{
+            overflow-x: hidden;
+        }
+    </style>
 </head>
 <body>
 <div class="container"></div>
