--- a/D20230720/index.html
+++ b/D20230720/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./webcss8.css">
     <link rel="stylesheet" href="./webcss9.css">
 </head>
-
+<link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
 <body>
     <div class="body">
         <header class="webtitle">
@@ -39,7 +39,7 @@
         </main>
         <footer>
             <div class="favorite_title">我最喜欢的一句话</div>
-            <div class="favorite_content">如果手里捏着属于自己的泥土,看见青禾在晴空下微风里缓缓生长,算计着一年的收获,那份踏实的心情,才是余生最好的答案
+            <div class="favorite_content">如果手里捏着属于自己的泥土,看见青禾在晴空下微风里缓缓生长,算计着一年的收获,那份踏实的心情,才是余生最好的答案</div>>
         </footer>
     </div>
 </body>
