--- a/D20230801/reading-time/hello.html
+++ b/D20230801/reading-time/hello.html
@@ -1,5 +1,28 @@
 <html lang>
 <body>
 <h1>Hello Extentions</h1>
+<input id="move" type="range" max="100" min="0" value="0" onchange="show()"/>
+<input id="num" type="text">
+<button type="button" id="changecolor" onclick="changecolor()" value="0"></button>
+<script type="text/javascript">
+    function show(){
+        var move = document.getElementById("move")
+        var num = document.getElementById("num")
+        num.value = move.value
+        num.style.fontSize = move.value
+    }
+    function changecolor(){
+        var button = document.getElementById("changecolor")
+        if (button.value === "0"){
+            document.body.style.backgroundColor = "black"
+            document.body.style.color = "white"
+            button.value = "1"
+        }else if (button.value === "1"){
+            document.body.style.color = "black"
+            document.body.style.backgroundColor = "white"
+            button.value = "0"
+        }
+    }
+</script>
 </body>
 </html>
