jquery和js不同的做法来实现，以及用插件消除小广告

--- a/D20230801/hello.html
+++ b/D20230801/hello.html
@@ -1,7 +1,7 @@
 <html lang>
 <body>
 <h1>Hello Extentions</h1>
-<input id="move" type="range" max="100" min="0" value="0" onchange="show()"/>
+<input id="move" type="range" max="100" min="0" value="0" oninput="show()"/>
 <input id="num" type="text">
 <button type="button" id="changecolor" onclick="changecolor()" value="0"></button>
 <script type="text/javascript">
