用两种办法实现上一个commit以及插件的优化

--- a/D20230802/Todo List.html
+++ b/D20230802/Todo List.html
@@ -8,7 +8,7 @@
 <body class="bg-info d-flex flex-column align-items-center">
 <div class="container w-50 mt-5 d-flex flex-column align-items-center bg-body-tertiary" id="user_add">
     <div>
-        <input id="user_input" type="text" onkeyup="enterToAdd()">
+        <input id="user_input" type="text" onkeyup="enterToAdd()" autofocus>
         <button type="button" class="btn btn-primary" onclick="addnew()" id="add">ADD</button>
     </div>
 </div>
@@ -66,6 +66,8 @@
         // child.appendChild(deletebutton)
         // console.log(child)
         // element.appendChild(child)
+
+
     }
 
 </script>
