--- a/seguoer-vue/index.html
+++ b/seguoer-vue/index.html
@@ -7,9 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-  <div id="app">
-      <button @click="count++">{{ count }}</button>
-  </div>
+  <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
   </body>
 </html>
